# SO1_1S2024_202101648

./: README.md
HojasdeTrabajo/HT1/: video.md
HojasdeTrabajo/HT1/hoja_trabajo1/: app.go  go.mod  main.go  wails.json
HojasdeTrabajo/HT1/modulo/: .Module.symvers.cmd  .modules.order.cmd  .modulo_clase4.ko.cmd  .modulo_clase4.mod.cmd  .modulo_clase4.mod.o.cmd  .modulo_clase4.o.cmd  Makefile  module_ram.c  modulo_clase4.ko  modulo_clase4.mod  modulo_clase4.mod.c
Proyecto1/: README.md  docker-compose.yaml
Proyecto1/backend/: dockerfile  go.mod  main.go
Proyecto1/frontend/: dockerfile  nginx.conf  package-lock.json  package.json
Proyecto1/frontend/src/: App.jsx  ArbolProcess.jsx  GraficoTReal.jsx  HistoricoG.jsx  SimulacionProcess.jsx  main.jsx  navbar.jsx
Proyecto1/modulos/CPU/: .Module.symvers.cmd  .cpu_so1_1s2024.ko.cmd  .cpu_so1_1s2024.mod.cmd  .cpu_so1_1s2024.mod.o.cmd  .cpu_so1_1s2024.o.cmd  .modules.order.cmd  cpu_so1_1s2024.c  cpu_so1_1s2024.ko  cpu_so1_1s2024.mod.c  modules.order
Proyecto1/modulos/PROCESOS/: .Module.symvers.cmd  (+10 more)
Proyecto2/: README.md
Proyecto2/Consumer/: consumer.go  dockerfile  go.mod  go.sum
Proyecto2/Locust/: main.py  traffic.json
Proyecto2/Producer/RUSTAPI/server/: Cargo.toml  dockerfile
Proyecto2/Producer/RUSTAPI/server/src/: main.rs
Proyecto2/k8s/: consumer.yaml  grafana.yaml  grcp.yaml  hpa.yaml  ingress.yaml  mongo.yaml  redis.yaml  rust.yaml
Tareas/Tarea1/: video.md
Tareas/Tarea2/: docker-compose.yaml  video.md
Tareas/Tarea3/: docker-compose.yaml  video.md
Tareas/Tarea4/: video.md
Tareas/Tarea5/: Tarea5.md
(+54 files in other folders)
