[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.36.2"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }